--- a/roles/base_deploy/templates/apticron.conf.j2
+++ b/roles/base_deploy/templates/apticron.conf.j2
@@ -3,7 +3,7 @@
 # set EMAIL to a space separated list of addresses which will be notified of
 # impending updates
 #
-EMAIL="sec@natatrix.net"
+EMAIL="<mail>@<domain>"
 
 #
 # Set DIFF_ONLY to "1" to only output the difference of the current run
@@ -36,7 +36,7 @@ EMAIL="sec@natatrix.net"
 # of "hostname -f" for the system name in the mails it generates. This option
 # overrides the ALL_FQDNS above.
 #
-SYSTEM="brie"
+SYSTEM="$SYSTEM"
 
 #
 # Set IPADDRESSNUM if you would like to configure the maximal number of IP
@@ -97,4 +97,4 @@ CUSTOM_NO_UPDATES_SUBJECT="[apticron] $SYSTEM: no updates"
 # 'From:' field used in the notification e-mails. Your default sender will
 # be something like root@ns3023942.ovh.net.
 #
-CUSTOM_FROM="root@brie"
+CUSTOM_FROM="root@$SYSTEM"
